# geofunc

./: pyproject.toml
perlscripts/: DATUM.  fitaskja.pl  geo.pm  itrf05tollh.pl  make_nord_displ.pl  timeserenu_nord.pl
src/geofunc/: __init__.py  geo.py  geofunc.py
tests/: HAFC.txyz  gpsops@gpsplot  plate_ISGPSvel.enu  station.info.sopac.apr05  station_coord.llh  station_coord.txt  station_coord.xyz  station_coord_isn16.enu  test_geo.py  tmp  tmpgeofunc.py  wgs84toisn93.py  xyztollh.py
